Redigeret 5 punkter til 3 punkter og ryddet op i random undersider.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -76,8 +76,7 @@
     <body>
         <header id="header">
             <a id="logo" href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}/img/logo_small.png" alt="{{ .Site.Title }}" /></a>
-            <h1><a href="{{.Site.BaseURL}}">{{.Site.Title}}</a></h1>
-            <p>{{.Description}}</p>
+            <p>Bitbureauet er en uafhængig internetpolitisk tænketank og interesseorganisation for et frit og åbent internettet.</p>
 
             {{ partial "follow.html" . }}
             {{ partial "navigation.html" . }}
