tmp switch to ugly urls

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,1 +1,1 @@
-<h6><a href="/3punkter">3 punkter for et frit og åbent internet</a></h6>
+<h6><a href="/3punkter.html">3 punkter for et frit og åbent internet</a></h6>
