tmp switch to ugly urls

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -75,7 +75,7 @@
     </head>
     <body>
         <header id="header">
-            <a id="logo" href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}/img/logo_small.png" alt="{{ .Site.Title }}" /></a>
+            <a id="logo" href="{{ .Site.BaseURL }}/index.html"><img src="{{ .Site.BaseURL }}/img/logo_small.png" alt="{{ .Site.Title }}" /></a>
             <p>Bitbureauet er en uafhængig internetpolitisk tænketank og interesseorganisation for et frit og åbent internettet.</p>
 
             {{ partial "follow.html" . }}
